--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Ganesh Singh",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
@@ -19,12 +20,15 @@
     "mocha": "^4.1.0",
     "mongoose": "^4.13.8",
     "morgan": "^1.8.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "nodemon": "^1.9.1",
     "supertest": "^3.0.0"
