updated users function

--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,19 @@
     "body-parser": "^1.15.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "connect-mongo": "^2.0.1",
     "cors": "^2.8.0",
     "dotenv": "^4.0.0",
     "express": "4.14.0",
+    "express-session": "^1.15.6",
+    "express-validator": "^4.3.0",
     "lodash": "^4.15.0",
     "mocha": "^4.1.0",
     "mongoose": "^4.13.8",
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "validator": "^9.2.0",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
   },
