--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "4.14.0",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
+    "jsonwebtoken": "^8.1.1",
     "lodash": "^4.15.0",
     "mocha": "^4.1.0",
     "mongoose": "^4.13.8",
